bad/assign_field_string_mcall_int.example_compiler_output
ERROR
[1mbad/assign_field_string_mcall_int.lat:10:20: [1;31merror: [0;1massigning to `string` from incompatible type `int`[m
	(new M).foo().fld = 42;
	                  [1;32m^[m
